# python-pdf-assistant-api

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  api.py  batch.py  cloudbuild.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt
adapter/: adapter.py
cloud_sql/: schema.sql
config/: envs.py
di/: di.py
domain/: assistant.py  document.py  error.py  test_assistant.py  test_document.py  test_error.py  test_user.py  user.py
entrypoint/: clean_assistant.py  clean_openai_assistant.py  graphql.py
handler/: api.py  auth.py  document.py  graphql.py  me.py  response.py  subscriber.py  user.py  util.py
handler/api_handler/: document.py  me.py  pre_sign_url.py  subscriber.py  user.py
handler/api_handler/middleware/: auth.py  error.py
handler/graphql_handler/: context.py  document.py  error.py  me.py  query.py  response.py  user.py
handler/middleware/: auth.py  error.py  log.py
handler/rest_api/: document.py  me.py  pre_sign_url.py  subscriber.py  user.py
infra/: cloud_sql.py  cloud_storage.py  cloud_task.py  cloud_tasks.py  logger.py  openai.py  secret_manager.py
infra/cloud_sql/: assistant_repo.py  common.py  cursor.py  document.py  document_repo.py  document_summary_repo.py  entity.py  openai_assistant_repo.py  user.py  user_repo.py
infra/datastore/: message_repo.py  openai_assistant_repo.py  openai_message_repo.py
infra/firestore/: assistant_repo.py  entity.py  message_repo.py  util.py
middleware/: auth.py  error.py  log.py
model/: assistant.py  document.py  error.py  openai_assistant.py  test_assistant.py  test_document.py  test_error.py  test_openai_assistant.py  test_user.py  user.py
sample_pdf/: README.md
sample_resource/: README.md  sample.csv
terraform/: .terraform.lock.hcl  README.md  api_gateway.tf  api_gateway.yaml  artifact_registry.tf  cloud_build.tf  cloud_run.tf  cloud_scheduler.tf  cloud_sql.tf  cloud_storage.tf  cloud_task.tf  firestore.tf  provider.tf  pubsub.tf  secret_manager.tf  service.tf  service_account.tf  services.tf  variable.tf
util/: gs_url.py
